--- a/couchbase/CouchbaseKafkaLoaderNewConsumer/pom.xml
+++ b/couchbase/CouchbaseKafkaLoaderNewConsumer/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cleverfishsoftware.streaming</groupId>
-    <artifactId>CouchbaseKafkaLoader</artifactId>
+    <artifactId>CouchbaseKafkaLoaderNewConsumer</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -16,16 +16,6 @@
             <artifactId>kafka_2.10</artifactId>
             <version>0.9.0.1</version>
         </dependency>
-        <!-- <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.10</artifactId>
-            <version>0.8.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>0.8.2.1</version>
-        </dependency> -->
         <dependency>
             <groupId>com.couchbase.client</groupId>
             <artifactId>java-client</artifactId>
@@ -61,6 +51,12 @@
             <artifactId>jackson-dataformat-csv</artifactId>
             <version>2.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.9.0.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -93,4 +89,5 @@
             </plugin>
         </plugins>
     </build>
+    <name>CouchbaseKafkaLoaderNewConsumer</name>
 </project>
