--- a/spark-streaming-mongo-filter/Dockerfile
+++ b/spark-streaming-mongo-filter/Dockerfile
@@ -2,7 +2,6 @@ FROM streamworks/basejdk
 
 # environmental settings
 ENV SPARK_HOME /usr/spark/default
-COPY spark_env.sh /etc/profile.d/spark_env.sh
 
 # install python, pip and pymongo
 RUN yum -y install python34 python-pip \
@@ -15,7 +14,7 @@ RUN yum -y install mongodb-org-shell mongodb-org-tools
 
 # install spark
 RUN mkdir /usr/spark \
-  && curl -O -L http://www-eu.apache.org/dist/spark/spark-1.6.1/spark-1.6.1-bin-hadoop2.6.tgz \
+  && curl -O -L http://apache.cs.utah.edu/spark/spark-1.6.1/spark-1.6.1-bin-hadoop2.6.tgz \
   && tar -xvf spark-1.6.1-bin-hadoop2.6.tgz -C /usr/spark \
   && ln -s /usr/spark/spark-1.6.1-bin-hadoop2.6/ /usr/spark/default \
   && rm -f spark-1.6.1-bin-hadoop2.6.tgz \
@@ -27,9 +26,4 @@ RUN git clone https://github.com/mongodb/mongo-hadoop.git \
   && cd mongo-hadoop/spark/src/main/python \
   && python setup.py install \
   && cd -
-
-RUN mkdir /jarlib \
-  && curl -o /jarlib/mongo-hadoop-core-1.5.1.jar -L \
-  http://central.maven.org/maven2/org/mongodb/mongo-hadoop/mongo-hadoop-core/1.5.1/mongo-hadoop-core-1.5.1.jar
-
-# ENTRYPOINT pyspark --jars mongo-hadoop-core-1.5.1.jar --driver-class-path mongo-hadoop-spark-1.5.1.jar
+ 
