got kafka-spark-streaming using pymongo to insert records into mongo, never could get pymongo-spark to work

--- a/spark-streaming-pyspark-mongo-filter/Dockerfile
+++ b/spark-streaming-pyspark-mongo-filter/Dockerfile
@@ -27,3 +27,7 @@ RUN git clone https://github.com/mongodb/mongo-hadoop.git \
   && cd mongo-hadoop/spark/src/main/python \
   && python setup.py install \
   && cd -
+
+# required environment vars for spark-submit
+ENV MONGO_SPARK_SRC /mongo-hadoop/spark
+ENV PYTHONPATH $PYTHONPATH:$MONGO_SPARK_SRC/src/main/python
