removed the work to try kafka-mongo-connector - got spark to do the job

--- a/flume-hdfs-loader/flume.conf
+++ b/flume-hdfs-loader/flume.conf
@@ -15,7 +15,7 @@ flume1.sinks.hdfs-sink-1.hdfs.fileType = DataStream
 flume1.sinks.hdfs-sink-1.hdfs.filePrefix = test-events
 flume1.sinks.hdfs-sink-1.hdfs.useLocalTimeStamp = true
 #flume1.sinks.hdfs-sink-1.hdfs.path = /tmp/kafka/%{topic}/%y-%m-%d
-flume1.sinks.hdfs-sink-1.hdfs.path = hdfs://localhost:9000/splash/splash_json
+flume1.sinks.hdfs-sink-1.hdfs.path = hdfs://localhost:9000/splash/%{topic}/%y-%m-%d
 flume1.sinks.hdfs-sink-1.hdfs.rollCount = 100
 flume1.sinks.hdfs-sink-1.hdfs.rollSize = 0
 flume1.channels.hdfs-channel-1.capacity = 10000
